--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 
   "dependencies": {
     "express": "*"
+    "mongodb": "*"
+    "mongoose": "*"
+    "jade": "*"
   },
   "devDependencies": {},
   "bundleDependencies": [],
